fix: schedule header spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@
   }
 
   .schedule-header {
-    @apply w-[95vw] md:w-fit text-2xl py-5 border-b-2 border-zinc-700 font-semibold text-center;
+    @apply w-[95vw] md:w-fit text-2xl py-10 border-b-2 border-zinc-700 font-semibold text-center underline;
   }
 
   .site-section {
@@ -34,7 +34,7 @@
   }
 
   .form-input {
-    @apply p-5 bg-zinc-400 text-black placeholder:text-zinc-700 font-mono focus:outline-none focus:ring-2 focus:ring-purple-500 focus:rounded-sm
+    @apply p-5 bg-zinc-400 text-black placeholder:text-zinc-700 focus:outline-none focus:ring-2 focus:ring-purple-500 rounded-md;
   }
 }
 
